[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/EnnemiGroup.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Ennemi1_2.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Ennemi1_3.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Ennemi1_1.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/EnnemiGroup1.gd" type="Script" id=5]

[node name="EnnemiGroup1" instance=ExtResource( 1 )]
script = ExtResource( 5 )

[node name="Ennemi1_2" parent="." index="0" instance=ExtResource( 2 )]
position = Vector2( 549, 197 )
frame = 1

[node name="Ennemi1_3" parent="." index="1" instance=ExtResource( 3 )]
position = Vector2( 736, 200 )

[node name="Ennemi1_1" parent="." index="2" instance=ExtResource( 4 )]
position = Vector2( 631, 198 )
